// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Table to store customer information
Item: Table to store item information related to orders
Order: Table to store order information related to customers
Product: Table to store product information
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR(255) 
    credit_limit DECIMAL 
    balance DECIMAL 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price DECIMAL 
    amount DECIMAL 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    date_shipped DATETIME 
    amount_total DECIMAL 
    notes VARCHAR(500) 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR(255) 
    unit_price DECIMAL 
    }



// Relationships
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
